# discord-links-bot

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  config.yaml  fly.toml  go.mod  go.sum  main.go  replacer.go  replacer_test.go  schema.json
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.forgejo/workflows/: release.yaml  test.yaml
.github/workflows/: build-docker.yml  test.yml
cmd/: root.go  run.go
internal/bot/: bot.go
internal/config/: config.go
internal/debug/: commit.go
internal/health/: health.go
internal/replacer/: deferred_replacer.go  link_follower.go  message.go  replacer.go  replacer_amazon.go  replacer_discord.go  replacer_instagram.go  replacer_reddit.go  replacer_test.go  replacer_tiktok.go  replacer_twitter.go  replacer_ytshorts.go  simple.go
resource/: resource.go
src/: main.rs
src/config/: mod.rs
src/discordbot/: event_handler.rs  mod.rs
src/replacer/: mod.rs  replacer_link_follower.rs  replacer_links_follower.rs  replacer_regex.rs
src/resource/: mod.rs
